--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ html {
 
 body {
   scrollbar-width: thin;
+  scrollbar-color: var(--theme-red);
   background-color: #fcf9e9;
   overflow-x: hidden;
 }
