--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,14 +29,14 @@ html {
 body {
   scrollbar-width: thin;
   scrollbar-color: var(--theme-red);
-  background-color: #fcf9e9;
+  background-color: hsl(51, 76%, 95%);
   overflow-x: hidden;
 }
 
 :root {
-  --theme-yellow: oklch(0.922 0.127 95.646);
-  --theme-red: oklch(0.559 0.153 23.425);
-  --theme-brown: oklch(0.396 0.094 358.327);
+  --theme-yellow: hsl(48, 100%, 75%);
+  --theme-red: hsl(0, 47%, 51%);
+  --theme-brown: hsl(337, 41%, 30%);
 }
 
 .color-red {
